# shop_fastapi

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yaml  items_views.py  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2026_01_05_1817-39c47d0b5569_create_products_table.py  2026_01_05_1831-b31ac2955238_create_users_table.py  2026_01_05_1845-5c53b9a654cd_create_posts_table.py  2026_01_05_1935-c3408c7a3c4f_create_profile_table.py  2026_01_07_1613-23120127d3ea_create_orders_table.py  2026_01_07_1637-69a1890f68a4_create_orders_product_association_for_.py  2026_01_07_1723-50b7b817bdc8_add_count_column_to_.py  2026_01_07_1748-a1504b854439_add_unit_price_column_to_.py
api_v1/: __init__.py
api_v1/demo_auth/: demo_jwt_auth.py  views.py
api_v1/products/: crud.py  dependencies.py  views.py
auth/: utils.py
core/: config.py
core/models/: __init__.py  database_helper.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
tests/: conftest.py  test_products_crud.py
users/: crud.py  schemas.py  views.py
